FIxed comments, repeated strings, authorization for api, operationId
